fix(kyo): pin kyo 1.0.0-RC4 — RC5/RC6 ship Java-25-only bytecode
CI (temurin 17/21) failed with UnsupportedClassVersionError: kyo
1.0.0-RC5 and RC6 artifacts are compiled to class file version 69
(Java 25) wholesale, so kyo's macro classes cannot even LOAD in a
17/21 compiler JVM at expansion time. It worked locally only because
this machine runs Java 25. RC4 is Java 17 bytecode with the same
redesigned string-keyed Record / Fields.Have / Schema APIs; at RC4 the
Json codec still lives inside kyo-schema itself, so the test-only
kyo-schema-json artifact goes away too.

One RC4 wrinkle: encodeString's zero-copy ASCII path reflects into
String's private constructor and throws IllegalAccessException on any
modern JDK without --add-opens java.base/java.lang. stringPrism's
write side now renders via encode + a UTF-8 decode instead — no JVM
flags required of consumers. decodeString is reflection-free.

Verified: full module suite green under Temurin 21 (the CI JVM), not
just the local Java 25.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_011PPiLXSGC7Xyxb4GQcQr77